--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,4 +1,4 @@
-name: "discord2fa"
+name: "discordbotmanager"
 version: '1.0'
-main: 'net.vitacraft.discord2fa_bukkit.Discord2FA'
+main: 'net.vitacraft.discordbotmanager.DiscordBotManager'
 api-version: '1.20'
