fixed paper injection

--- a/build.gradle
+++ b/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
 
     compileOnly 'com.mojang:brigadier:1.0.18'
+    compileOnly "io.papermc.paper:paper-api:1.21-R0.1-SNAPSHOT"
 
     implementation("com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4")
     shadow 'com.github.Carleslc.Simple-YAML:Simple-Yaml:1.8.4'
