added a command and some fixes

--- a/bukkit/src/main/resources/plugin.yml
+++ b/bukkit/src/main/resources/plugin.yml
@@ -1,6 +1,6 @@
 name: "discordbotmanager"
 version: '1.0'
-main: 'net.vitacraft.discordbotmanager.DiscordBotManager'
+main: 'net.vitacraft.discordbotmanager_bukkit.DiscordBotManager'
 api-version: '1.20'
 
 commands:
