--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,15 @@
 build/
 run/
 !gradle/wrapper/gradle-wrapper.jar
+/.gradle/*
+build.gradle
+
+/fabric/build/
+/fabric/.gradle
+
+/bukkit/build/
+/common/build/
+
 !**/src/main/**/build/
 !**/src/test/**/build/
 
